--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -89,6 +89,6 @@ h1{
 
 @media screen and (max-width: 400px){
   .earth{
-      padding: 4rem 1.5rem 4rem 1.5rem;
+      padding: 4rem 1.3rem 4rem 1.3rem;
   }
 }
